# NorthStar

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: enginetests.yml  lintcheck.yml
src/: constants.h  gamestate.cpp  gamestate.h  main.cpp  move.h  move_generator.h  somefunctions.cpp  somefunctions.h  utilities.cpp  utilities.h
test/: gamestate_test.cpp  hello_test.cpp  somefunctions_test.cpp  utilities_test.cpp
